Add react-native-sensors dependency and permissions for high sampling rate sensors

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -118,4 +118,6 @@ dependencies {
     }
 
     implementation project(':react-native-vector-icons')
+      implementation project(':react-native-sensors')
+
 }
