--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "async-retry": "^1.3.3",
     "axios": "^1.9.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
@@ -43,7 +45,9 @@
     "@react-native/eslint-config": "0.79.2",
     "@react-native/metro-config": "0.79.2",
     "@react-native/typescript-config": "0.79.2",
+    "@types/async-retry": "^1.4.9",
     "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.17.17",
     "@types/react": "^19.0.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
